Add image link shared

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="image_src"
+      href="https://raw.githubusercontent.com/paulomarquesdev/expert-notes/master/.github/cover.png"
+    />
 
     <title>Expert Notes</title>
   </head>
