--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <title>Expert Notes</title>
   </head>
-  <body class="bg-slate-900 text-slate-50 antialiased">
+  <body class="bg-gray-900 text-gray-50 antialiased">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
